[gd_scene load_steps=4 format=3 uid="uid://dmi0cl7oa8ghq"]

[ext_resource type="Script" uid="uid://uajjkd05xiud" path="res://Scripts/inventory_ui.gd" id="1_m3fh6"]
[ext_resource type="Texture2D" uid="uid://cjd0g1vl51hgf" path="res://Assets/inventory_sprites/inventory_bg-2.png.png" id="2_os1l6"]
[ext_resource type="PackedScene" uid="uid://chjh2xhjg7p7a" path="res://Scenes/inv_ui_slot.tscn" id="3_vr5og"]

[node name="inventory_UI" type="Control"]
visibility_layer = 3
z_index = 1
y_sort_enabled = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m3fh6")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 96.75
offset_bottom = 63.0
texture = ExtResource("2_os1l6")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -28.0
offset_right = 38.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="inv_UI_slot1" parent="NinePatchRect/GridContainer" instance=ExtResource("3_vr5og")]
layout_mode = 2

[node name="inv_UI_slot2" parent="NinePatchRect/GridContainer" instance=ExtResource("3_vr5og")]
layout_mode = 2

[node name="inv_UI_slot3" parent="NinePatchRect/GridContainer" instance=ExtResource("3_vr5og")]
layout_mode = 2

[node name="inv_UI_slot4" parent="NinePatchRect/GridContainer" instance=ExtResource("3_vr5og")]
layout_mode = 2

[node name="inv_UI_slot5" parent="NinePatchRect/GridContainer" instance=ExtResource("3_vr5og")]
layout_mode = 2

[node name="inv_UI_slot6" parent="NinePatchRect/GridContainer" instance=ExtResource("3_vr5og")]
layout_mode = 2

[node name="inv_UI_slot7" parent="NinePatchRect/GridContainer" instance=ExtResource("3_vr5og")]
layout_mode = 2

[node name="inv_UI_slot8" parent="NinePatchRect/GridContainer" instance=ExtResource("3_vr5og")]
layout_mode = 2

[node name="place_planter" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 24.0
offset_right = 66.0
offset_bottom = 40.0

[connection signal="pressed" from="place_planter" to="." method="_on_place_planter_pressed"]
